updated new database and added on-click image in info window

--- a/templates/home/viewColleges.html
+++ b/templates/home/viewColleges.html
@@ -232,14 +232,14 @@
              
           {% endif %}
           {% if i.picture %}
-            <td><a href="{{ i.picture.url }}" class = "popupimage2"><img src="../static/map/images/icons8-image-48.png"/></a></td>
+            <td><a href="{{ i.picture.url }}" class = "popupimage2" target = "_app"><img src="../static/map/images/icons8-image-48.png"/></a></td>
           {% else %}
             <td><img src="../static/map/images/icons8-image-48.png"/></td>
           
           
             {% endif %}  
           
-            <td><a href="export/{{i.id}}"><img src="../static/map/images/icons8-microsoft-excel-48.png" /></a></td>
+            <td><a href="export/{{i.institutecode}}"><img src="../static/map/images/icons8-microsoft-excel-48.png" /></a></td>
              
           
           {% if i.files %}
@@ -366,8 +366,9 @@
      var link = $('<a href="#" class="speciallink">TestLink</a>').click(function() {
     alert("test");
 })[0]
-     var marker = L.marker(["{{ i.latitude }}", "{{ i.longitude }}"], {icon:pvIcon1}).addTo(mymap).bindPopup(table4, popupOptions);
-     collegeGroup1.addLayer(marker);
+    //  var marker = L.marker(["{{ i.latitude }}", "{{ i.longitude }}"], {icon:pvIcon1}).addTo(mymap).bindPopup(table4, popupOptions);
+    var marker = L.marker(["{{ i.field_latitude_field }}", "{{ i.field_longitude_field }}"], {icon:pvIcon1}).addTo(mymap).bindPopup(table4, popupOptions); 
+    collegeGroup1.addLayer(marker);
      // Added  hover to open popups
     //  marker.on('mouseover', function (e) {
     //        this.openPopup(e.latlng);
