changes in style tag of geolocation button

--- a/templates/home/viewColleges.html
+++ b/templates/home/viewColleges.html
@@ -278,7 +278,7 @@ footer{
 <div class="border">
   <button class="btn btn-primary" onclick="clearMap()" >Clear Map</button>
 </div>
-<button class="btn btn-primary" id="loc" style="text-align: 5px" type="button" onclick="getLocation()">Get My Location</button>
+<button class="btn btn-primary" id="loc" style="display:block ;text-align: center;margin: auto"  type="button" onclick="getLocation()">Get My Location</button>
 </div>
 <br>
 <br>
