--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -1,26 +1,38 @@
+
 {% load static %}
 <html lang="en">
 
-<head>
+<head >
+  <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
+  <link rel=”stylesheet” href=”css/bootstrap.css”>
+  <link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
+  <h1 style="background-color: #008000; color: azure;"><center>MahaEngineering</center></h1>
   <meta charset="UTF-8">
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
-  <title>Engineering Colleges:Maharashtra</title>
+  <title>Engineering</title>
   <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
-  <link rel="manifest" href="manifest.json">
+  <!-- <link rel="manifest" href="manifest.json"> -->
   <!-- materialize icons, css & js -->
+
+  <link rel="stylesheet" href="{% static 'static1/plugins/L.Control.Sidebar.css' %}">
+  <link rel="stylesheet" href="{% static 'static1/plugins/easy-button.css' %}" />
+
+
+  <!-- bootstrap5 -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
   
-  <link type="text/css" href="{% static 'home/css/materialize.min.css' %}" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- <link type="text/css" href="{% static 'home/css/materialize.min.css' %}" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
   <!--<link type="text/css" href="{% static 'home/css/style.css' %}" rel="stylesheet">-->
-  <script type="text/javascript" src="{% static 'home/js/materialize.min.js' %}"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <!-- <script type="text/javascript" src="{% static 'home/js/materialize.min.js' %}"></script> -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   {% block extra_css%}
   {% endblock %}
 <style>
-  @media only screen and (min-width: 600px) {
+@media only screen and (min-width: 600px) {
   /* For tablets: */
   .col-s-1 {width: 8.33%;}
   .col-s-2 {width: 16.66%;}
@@ -99,120 +111,20 @@
 <body class="grey lighten-4">
 
 
-  <!-- Dropdown Structure -->
-<ul id="dropdown" class="dropdown-content" style="z-index: 1;">
-  <li><a href="">Offer of supply</a></li>
-  <li><a href="">Raise demand</a></li>
-  <li><a href="">user</a></li>
-</ul>
-<ul id="dropdown1" class="dropdown-content" >
-  <li><a href="">English</a></li>
-  <li><a href="">Hindi(coming soon)</a></li>
-  <li><a href="">Marathi(coming soon)</a></li>
-</ul>
-
-  <!-- top nav -->
-  <nav class="green" style="position: sticky; top: 0; z-index: 9999999;">
-    <div class="nav-wrapper container" >
-      <a href="/" class="brand-logo" style="color: white;  font-weight: bold; font-size: 25px; text-align: left;">Engineering Colleges in Maharashtra</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="#" data-target="mobile-nav" class="sidenav-trigger">
-              <i class="material-icons">menu</i>
-            </a>
-            <ul id="topnav" class="right hide-on-med-and-down" style="align-items: center;"> 
-              <li><a href="{% url 'engineering_colleges' %}" class="waves-effect" style="font-size: large;"><b>Colleges</b></a></li>
-      <!--<a href="/" style="text-decoration: none;"><span style="color: white;  font-weight: bold; font-size: 22px; text-align: left;">PoshanVatika</span></a>-->
-      <!-- <ul id="topnav" class="right hide-on-med-and-down" style="align-items: center;"> 
-      
-      <li><span class="right grey-text text-darken-1">
-        <a><i class="material-icons sidenav-trigger" data-target="side-menu">menu</i></a>
-      </span></li> -->
-    </ul>
-    </div>
-  </nav>
-    
-  
-  <!--mobile view left nav-->
-  <ul class="sidenav" id="mobile-nav" style="z-index: 9999999;">
-    <li><a class="subheader">Maharashtra's Engineering Colleges</a></li>
-    
-    <li><a class="subheader">Maharashtra's Engineering Colleges</a></li>
-    <li><a href="{% url 'engineering_colleges' %}" class="waves-effect">Colleges</a></li>
-    
-    <!-- <li>
-      <div class="divider"></div>
-    </li>
-
-    <li>
-      <div class="divider"></div>
-    </li>
-    <li ><a class="subheader" >DATA CONTRIBUTION AND FORMS</a></li>
-    
-    
-    <li><a href="https://ee.kobotoolbox.org/x/vHVD3HnV" style="font-size: 15px;">PoshanVaitka Form</a> </li>
-
-    
-    <li>
-      <div class="divider"></div>
-    </li>
-    <li ><a class="subheader" >TREE CENSUS</a></li>
-    
-    <li><a class="nav-link" href="https://ee.kobotoolbox.org/x/KCR9XYmc">Form</a></li>
-    
-  </ul> -->
-
-</ul>
-  
-  <script>
-    const sideNav = document.querySelector('.sidenav');
-      M.Sidenav.init(sideNav, {});
-
-
-    var dropdowns = document.querySelectorAll('.dropdown-trigger')
-    for (var i = 0; i < dropdowns.length; i++){
-        M.Dropdown.init(dropdowns[i]);
-    }
-  
-    </script>
-
-
-  <!-- side nav -->
-  <ul id="side-menu" class="sidenav side-menu" style="width: 350px; z-index: 99999999;">
-    <li><a class="subheader">POSHANVATIKA</a></li>
-    
-    <li>
-      <div class="divider"></div>
-    </li>
-
-    
-    <li>
-      <div class="divider"></div>
-    </li>
-    <li ><a class="subheader" >DATA CONTRIBUTION AND FORMS</a></li>
-    
-    
-    <li><a href="https://ee.kobotoolbox.org/x/vHVD3HnV" style="font-size: 15px;">PoshanVaitka Form</a> </li>
-    
-    <li>
-      <div class="divider"></div>
-    </li>
-    <li ><a class="subheader" >TREE CENSUS</a></li>
-    
-    
-   
-  </ul>
-
-  </ul>
-
-
-  
   {% block content %}
   {% endblock %}
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="{% static 'home/js/ajax_csrf.js' %}"></script>
-  <script src="{% static 'home/js/ui.js' %}"></script>
-  <footer>
-    <nav class="green"><b>The website is under construction</b></nav>   
-  </footer>
+
+  <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/> -->
+  
+  
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <!-- <script src="{% static 'home/js/ajax_csrf.js' %}"></script> -->
+  <!-- <script src="{% static 'home/js/ui.js' %}"></script> -->
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<!-- <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script> -->
+
 </body>
 </html>
