--- a/templates/home/viewColleges.html
+++ b/templates/home/viewColleges.html
@@ -5,30 +5,13 @@
 {% load static %}
 {% block extra_resources%}
     <!-- Bootstrap CSS -->
-    <link
-      href=
-"https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity=
-"sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet"
-          href="style.css" />
-    <link rel="preconnect" 
-          href="https://fonts.gstatic.com" />
-    <link
-      href=
-"https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="{% static 'css/footer.css' %}">
-<link rel="stylesheet" href="{% static 'css/leaflet.css' %}">
-<link rel="stylesheet" href="{% static 'plugins/L.Control.Pan.css' %}">
-<link rel="stylesheet" href="{% static 'plugins/L.Control.Zoomslider.css' %}">
-<link rel="stylesheet" href="{% static 'plugins/L.Control.MousePosition.css' %}">
-<link rel="stylesheet" href="{% static 'plugins/L.Control.Sidebar.css' %}">
-<script src="{% static 'static1/plugins/L.Control.Sidebar.js' %}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"crossorigin="anonymous"/>
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet"/>
+    
+
+
 <script src="{% static 'static1/plugins/easy-button.js' %}"></script>
 <script src="{% static 'static1/plugins/L.Control.Pan.js' %}"></script>
 
@@ -213,8 +196,6 @@ footer{
 
 {% block map %}
 <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
-<link rel=”stylesheet” href=”css/bootstrap.css”>
-<link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
 <div id="mapid" style="width: 100%; height: 100%;"></div>
 <div id="sidebar" style="background-color: rgba(255, 255, 255); height: 80%;">                <!-- Main container -->
 
