--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -4,12 +4,13 @@
 
 <head >
   <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
-  <h1 style="background-color: #008000; color: azure;"><center>MahaEngineering</center></h1>
+  
   <meta charset="UTF-8">
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
   <title>Engineering</title>
+  
   <!-- <link rel="manifest" href="manifest.json"> -->
   <!-- materialize icons, css & js -->
 
@@ -29,6 +30,8 @@
   {% block extra_css%}
   {% endblock %}
 <style>
+
+
   footer{
   font-size: 20px;
   text-align: center
@@ -77,8 +80,9 @@
 
 <body class="grey lighten-4">
 
-
+  <h1 style="background-color: #008000; color:azure; margin:0;"><center>MahaEngineering</center></h1>
   {% block content %}
+  
   {% endblock %}
 
   <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/> -->
