--- a/templates/home/base_map.html
+++ b/templates/home/base_map.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 
+    <link rel="stylesheet" href="{% static 'static1/plugins/L.Control.Sidebar.css' %}"/>
+    <script src="{% static 'static1/plugins/L.Control.Sidebar.js' %}"></script>
+    <script src="{% static 'static1/plugins/easy-button.js' %}"></script>
+    
     {% block extra_resources%}
     {% endblock %}
 	
