--- a/templates/home/management.html
+++ b/templates/home/management.html
@@ -1,101 +1,146 @@
-
-<!DOCTYPE html >
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        table,th,td{
-            border: 2px solid white;
-            border-right: 2px solid white;
-            border-collapse: collapse;
-            text-align: center;
+        table td,table th{
+            border: 1px solid black; 
         }
-        th,td{
-            background-color: #96D4D4;
-            text-align: center;
-            font-size: 30px;
-        }
-       
+        
+
     </style>
 </head>
-<center><table border="1" >
-    
-        <tr>
-            
-            <th>
-                <h3>choicecode</h3> 
-            </th>
-            
-            <th>
-                <h3>coursename</h3>
-            </th>
-            <th>
-                <h3>coursedurationyear</h3>
-            </th>
-            <th>
-                <h3>programname</h3>
-            </th>
-            <th>
-               <h3>intake</h3> 
-            </th>       
-         
-        </tr>
+<body style="margin: 0;">
+    <!-- <div class="text-center" style="background-color: #008000; width:100%;"> -->
+  <h1 style="background-color: #008000; color:azure; margin:0;"><center>MahaEngineering</center></h1>
+    <!-- </div> -->
 
-        
-        {% for i in choice %}
-        
-        <tr>
-            <td>
-                {{i.choicecode}}
-                
-            </td>
-            <td>
-                {{i.coursename}}
-                
-            </td>
-            <td>
-                {{i.coursedurationyear}}
-            </td>
-            <td>
-                {{i.programname}}
-            </td>
-            <td>
-                {{i.intakecurrentyear_aspergr}}
-            </td>
-            
-        </tr>
-           
-            {% endfor %}
-      
 
-    
-</table>
-   <br>
-   <br>   
-</center>
-<center>
-<table border="1">
-    <tr>
-        <th>
-            <h3>Establisment_Year</h3>
-        </th>
-        <th>
-            <h3>nbaaccreditation_status</h3>
-        </th>
-    
-    </tr>
-    {% for i in establishment %}
-    <tr>
-        <td>
-            {{i.instituteestablishmentyear}}
-        </td>
-        {% for i in NBA %}
-        <td>
-            {{i.nbaaccreditation_status}}
-        </td>
-        {% endfor %}
-    </tr>
-    {% endfor %}
-</table>
-      
-</center>
+        <div class="container" style="display: grid; grid-template-columns: 70% 30%; width:fit-content; margin: auto;">
+            <div class="d1" style="grid-row: 1/2; grid-column: 1/3;">
+                <div style="display: grid; grid-template-columns: auto auto; grid-template-rows: auto auto">
+                    <h2><strong>Institute Name:</strong></h2><h2> {{data.0.institutenameenglish}} (estd. {{data.0.instituteestablishmentyear }})</h2>
+                    <h2><strong>Address:</strong></h2><h2> {{data.0.instituteaddressenglish}} {{data.0.talukaname}} {{data.0.districtname}} {{regionname}} Maharashtra, {{data.0.institutepin}}</h2>
+                </div>
+            </div>
+            <div class="d3 mt-4" style="grid-row: 2/3; grid-column: 1/3;">
+                    <table class="text-center">
+                        <tr>
+                            <th>Status</th>
+                            <th>Autonomy</th>
+                            <th>Minority</th>
+                            <th>NACC</th>
+                            <th>Letter Grade</th>
+                            <th>NBA</th>
+                        </tr>
+                        <tr>
+                            <td>Government</td>
+                            <td>Autonomous</td>
+                            <td>Hindu</td>
+                            <td>Accreditation</td>
+                            <td>None</td>
+                            <td>Nonekjhkjkjjkhjhk</td>
+                        </tr>
+                    </table>
+        
+                
+            </div>
+            <div class="d4 mt-5 text-center" style="grid-row: 3/4; grid-column: 1/3;">
+                
+                    <table>
+                    
+                        <tr>               
+                            <th>
+                                Institute Choice Code
+                            </th>
+                            <th>
+                                Course Level
+                             </th>
+                            <th>
+                                Course Name
+                            </th>
+                            <th>
+                                Course Duration (Year)
+                            </th>
+                            <th>
+                                Program Name
+                            </th>
+                            <th>
+                               Intake Capacity
+                            </th>
+                                   
+                         
+                        </tr>
+                
+                        
+                        {% for i in choice %}
+                        
+                        <tr>
+                            <td>
+                                {{i.choicecode}}
+                                
+                            </td>
+                            <td>
+                                {{i.courselevelname}}
+                            </td>
+                            <td>
+                                {{i.coursename}}
+                                
+                            </td>
+                            <td>
+                                {{i.coursedurationyear}}
+                            </td>
+                            <td>
+                                {{i.programname}}
+                            </td>
+                            <td>
+                                {{i.intakecurrentyear_aspergr}}
+                            </td>
+                            
+                        </tr>
+                            {% endfor %}
+                    
+                </table>
+                   <br>
+                   <br>   
+            </div>
+            <div class="d5 my-4" style="grid-column: 1/3;">
+            <h2>Hostel Capacity</h2>
+            <table>
+                <tr>
+                    <th>Boys</th>
+                    <th>Girls</th>
+                </tr>
+                <tr>
+                    <td>{{data.0.boyshostelcapacitytotal}}</td>
+                    <td>{{data.0.girlshostelcapacitytotal}}</td>
+                </tr>
+            </table>
+            </div>
+            <div class="d6 mb-3" style="grid-column: 1/3;">
+                <h6 class="mr-1" style="display: inline-block;"><strong>Principal Name:</strong> {{data.0.principalnameenglish}}</h6>
+                <h6 class="mx-1" style="display: inline-block;"><strong>Contact Number:</strong> {{data.0.principalofficephoneno}}</h6>
+                <h6 class="mx-1" style="display: inline-block;"><strong>Email:</strong> <a href="">{{data.0.instituteemailid}}</a></h6>
+                <h6 style="display: inline-block;"><strong>Link:</strong> <a href="">{{data.0.institutewebaddress}}</a></h6>
+            </div>
+        </div>
+
+
+
+
+
        
     
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> 
+</body>
+</html>
+
+
